examples/datalog/15_arithmetic/22_modulo_semantics.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mod
Knowledge graph 'test_mod' created.
Switched to knowledge graph: test_mod
> .kg use test_mod
Switched to knowledge graph: test_mod
> +vals[(7,), (10,), (15,), (8,)].
Inserted 4 fact(s) into 'vals'.
> mod_3(X, Y) :- vals(X), Y = X ?- mod_3(X, Y).
Script error: Parse error: Invalid term: 'X ?- mod_3(X, Y)'
